# katsdpmetawriter

./: Dockerfile  Jenkinsfile  LICENSE  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt
doc/: conf.py  index.rst  katsdpmetawriter.rst  modules.rst
katsdpmetawriter/: __init__.py
scripts/: meta_writer.py
src/katsdpmetawriter/: __init__.py
test/: test_core.py
