[metadata]
name = katsdpmetawriter
description = Karoo Array Telescope Meta Data Writer
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Modified BSD
author = MeerKAT SDP Team
author_email = sdpdev+katsdpmetawriter@ska.ac.za
url = https://github.com/ska-sa/katsdpmetawriter
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
install_requires =
    aiokatcp
    boto
    katsdptelstate
    katsdpservices
scripts = scripts/meta_writer.py
python_requires = >=3.5

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
